Update to Python 3 and the like

--- a/example/mtg_analysis.ipynb
+++ b/example/mtg_analysis.ipynb
@@ -45,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NOT using graph editor observer No module named grapheditor\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import openalea\n",
     "from openalea.mtg import *\n",
@@ -89,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,33 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db82fd0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot(g)"
    ]
@@ -170,29 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nb vertices at scale  1 :  1\n",
-      "Classes :  ['P']\n",
-      "Nb vertices at scale  2 :  63\n",
-      "Classes :  ['A']\n",
-      "Nb vertices at scale  3 :  198\n",
-      "Classes :  ['S', 'U']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb_scales = g.nb_scales()\n",
     "\n",
     "# Print the vertices at different scales\n",
     "for scale in range(1, nb_scales):\n",
-    "    print 'Nb vertices at scale ', scale, ': ', g.nb_vertices(scale=scale)\n",
-    "    print 'Classes : ', list(set(g.class_name(vid) for vid in g.vertices(scale=scale)))"
+    "    print('Nb vertices at scale ', scale, ': ', g.nb_vertices(scale=scale))\n",
+    "    print('Classes : ', list(set(g.class_name(vid) for vid in g.vertices(scale=scale))))"
    ]
   },
   {
@@ -204,31 +161,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f857408e750>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot(g, scale=g.max_scale()-1)"
    ]
@@ -242,27 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['A', 'P', 'S', 'U']\n",
-      "Nb U 84\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "classes = list(set(g.class_name(vid) for vid in g.vertices() if g.class_name(vid)))\n",
-    "print classes\n",
+    "print(classes)\n",
     "\n",
     "def vertices(g, class_name='P'):\n",
     "    return [vid for vid in g.vertices() if g.class_name(vid)==class_name]\n",
     "\n",
     "vids_U = vertices(g, 'U')\n",
-    "print 'Nb U', len(vids_U)"
+    "print('Nb U', len(vids_U))"
    ]
   },
   {
@@ -274,33 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db82750>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot(g, selection=vids_U)"
    ]
@@ -321,20 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Nf', 'YY', 'edge_type', 'Az1', '_line', 'index', 'label', 'TopDia', 'phi', 'psi', 'Azm', 'XX', 'ZZ', 'El1', 'NFe', 'Dist', 'Lum4', 'Lum2', 'Lum3', 'Lum1', 'teta', 'position', 'Inc']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Properties on the MTG: this exclude all the topological properties\n",
-    "print g.property_names()\n",
+    "print(g.property_names())\n",
     "\n",
     "# Retrieve one property for the MTG (dict)\n",
     "phi = g.property('phi')"
@@ -351,31 +247,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db3cf90>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot(g, labels=phi)"
    ]
@@ -396,11 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = g.roots_iter(scale=g.max_scale()).next()\n",
+    "root = next(g.roots_iter(scale=g.max_scale()))\n",
     "trunk = g.Trunk(root)"
    ]
   },
@@ -413,31 +287,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db82950>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plot(g, selection=trunk)"
    ]
@@ -458,31 +310,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f857408ea50>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "leaves = [vid for vid in g.vertices(scale=g.max_scale()) if g.is_leaf(vid)]\n",
     "plot(g, selection=leaves)"
@@ -504,33 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db3c410>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "c_roots = [g.component_roots_at_scale_iter(cid, scale=g.max_scale()).next() for cid in g.vertices(scale=g.max_scale()-1)]\n",
+    "c_roots = [next(g.component_roots_at_scale_iter(cid, scale=g.max_scale())) for cid in g.vertices(scale=g.max_scale()-1)]\n",
     "plot(g, selection=c_roots)"
    ]
   },
@@ -550,31 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"900px\"\n",
-       "            height=\"800px\"\n",
-       "            src=\"mtg.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f854db82790>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "root_id = 139\n",
     "s = g.Descendants(root_id)\n",
@@ -597,31 +383,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc4cae4718c54b28a466244c15a3f17d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "UGxvdChhbnRpYWxpYXM9MywgYXhlcz1bJ3gnLCAneScsICd6J10sIGJhY2tncm91bmRfY29sb3I9MTY3NzcyMTUsIGNhbWVyYT1bNC41LCA0LjUsIDQuNSwgMC4wLCAwLjAsIDAuMCwgMS4wLCDigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "drf = data/'walnut.drf'\n",
     "dressing_data = dresser.dressing_data_from_file(drf)\n",
@@ -630,25 +394,32 @@
     "scene = pf.plot(gc=True, display=False)\n",
     "PlantGL(scene)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.16"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -762,6 +533,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -769,6 +541,7 @@
        },
        "color": 4271375,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -779,6 +552,7 @@
        "flat_shading": true,
        "id": 140183449373456,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          2928,
@@ -786,6 +560,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -796,6 +571,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          1968,
@@ -927,6 +703,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -934,6 +711,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          28
@@ -944,12 +722,14 @@
        "flat_shading": true,
        "id": 139841587525968,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          0
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -960,6 +740,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1082,6 +863,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1089,6 +871,7 @@
        },
        "color": 4271375,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1099,6 +882,7 @@
        "flat_shading": true,
        "id": 140210511005904,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          2928,
@@ -1106,6 +890,7 @@
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -1116,6 +901,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          1968,
@@ -1304,6 +1090,7 @@
        "_view_module_version": "",
        "_view_name": null,
        "attribute": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
@@ -1311,6 +1098,7 @@
        },
        "color": 255,
        "color_map": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          28
@@ -1321,12 +1109,14 @@
        "flat_shading": true,
        "id": 140183449176656,
        "indices": {
+        "compressed_buffer": {},
         "dtype": "uint32",
         "shape": [
          0
         ]
        },
        "model_matrix": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          4,
@@ -1337,6 +1127,7 @@
        "opacity": 1,
        "type": "Mesh",
        "vertices": {
+        "compressed_buffer": {},
         "dtype": "float32",
         "shape": [
          0
