--- a/example/plantgl_objects.ipynb
+++ b/example/plantgl_objects.ipynb
@@ -246,7 +246,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "IPython (Python 2)",
    "language": "python",
    "name": "python2"
   },
